--- a/style.css
+++ b/style.css
@@ -2,11 +2,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
 
 :root {
-    --background-color-primary: #00191C;
-    --background-color: #000D12;
-    --color-detail: #7EC3AE;
+    --background-color-primary: #292929;
+    --background-color: #1b1b1b;
+    --color-detail: #00ffc3;
     --color-text: #C3D7D3;
-    --color-alert: #BF0F1E;
+    --color-alert: #ff0000;
 }
 
 * {
@@ -16,7 +16,7 @@
 }
 
 body {
-    background-image: linear-gradient(#00191C, #001114);
+    background-image: linear-gradient(var(--background-color-primary), #1d1d1d);
     min-height: 100vh;
     color: #fff;
     font-family: 'inter', sans-serif;
@@ -94,8 +94,8 @@ label {
 }
 
 input {
-    border-radius: 4px;
-    border: 1px solid var(--color-detail);
+    border-radius: 8px;
+    border: none;
     padding: 4px 8px;
     height: 30px;
     font-size: 16px;
@@ -103,7 +103,6 @@ input {
 }
 
 button {
-    /* margin-top: 24px; */
     padding: 12px 24px;
     border-radius: 8px;
     border: 1px solid var(--color-detail);
